--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-My GitHub home page
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>home</title>
+</head>
+
+<body>
+<script language=”javascript” type=”text/javascript”>
+window.location.href=”/comicbook/index.com";
+</script>
+</body>
+</html>
