--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <body>
 <script language=”javascript” type=”text/javascript”>
-window.location.href=”/comicbook/index.com";
+window.location.href=”http://aferlazzo.github.com/comicbook/";
 </script>
 </body>
 </html>
