--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<script language=”javascript” type=”text/javascript”>
+<script>
 window.location.href=”http://aferlazzo.github.com/comicbook/";
 </script>
 </body>
