--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <title>home</title>
-</head>
-
-<body>
-<script>
-window.location.href=”http://aferlazzo.github.com/comicbook/";
+<script type="text/javascript">
+function delayFunc(){
+	document.location.href = 'http://aferlazzo.github.com/comicbook/';
+}
 </script>
+</head>
+<body onLoad="setTimeout('delayFunc()', 500)">
 </body>
 </html>
