--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <head>
 <script type="text/javascript">
 function delayFunc(){
-	document.location.href = 'http://aferlazzo.github.com/comicbook/';
+	document.location.href = 'http://anthonyferlazzo.com/comicbook/';
 }
 </script>
 </head>
-<body onLoad="setTimeout('delayFunc()', 50)">
+<body onLoad="setTimeout('delayFunc()', 20)">
 </body>
 </html>
