figuring out git...fixing the redirect to anthonyferlazzo.com

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <script type="text/javascript">
 function delayFunc(){
-	document.location.href = 'http://anthonyferlazzo.com/comicbook/';
+	document.location.href = 'http://anthonyferlazzo.com/comicbook/index.html';
 }
 </script>
 </head>
