--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
       <header>
         <h1>Thinkful</h1>
         <p>For some Angular training</p>
-        <p class="view"><a href="https://github.com/aferlazzo/aferlazzo.github.com">View the Project on GitHub <small>aferlazzo/aferlazzo.github.com</small></a></p>
+        <p class="view"><a href="https://github.com/aferlazzo/Thinkful">View the Project on GitHub <small>aferlazzo/Thinkful</small></a></p>
         <ul>
-          <li><a href="https://github.com/aferlazzo/aferlazzo.github.com/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/aferlazzo/aferlazzo.github.com/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/aferlazzo/aferlazzo.github.com">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/aferlazzo/Thinkful/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/aferlazzo/Thinkful/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/aferlazzo/Thinkful">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
